--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -35,17 +35,17 @@ steps:
   #   timeout: ${TIMEOUT:-10}
   #   skip: $SKIP_UBUNTU_16
 
-  - label: ":ubuntu: Ubuntu 18.04 - Build"
-    command:
-      - "bash ./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_18
+  # - label: ":ubuntu: Ubuntu 18.04 - Build"
+  #   command:
+  #     - "bash ./.cicd/build.sh"
+  #     - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+  #   env:
+  #     IMAGE_TAG: "ubuntu-18.04"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: $SKIP_UBUNTU_18
 
   # - label: ":darwin: macOS 10.14 - Build"
   #   command:
@@ -105,17 +105,17 @@ steps:
   #   timeout: ${TIMEOUT:-10}
   #   skip: $SKIP_UBUNTU_16
 
-  - label: ":ubuntu: Ubuntu 18.04 - Unit Test"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/parallel-tests.sh"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_18
+  # - label: ":ubuntu: Ubuntu 18.04 - Unit Test"
+  #   command:
+  #     - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
+  #     - "bash ./.cicd/parallel-tests.sh"
+  #   env:
+  #     IMAGE_TAG: "ubuntu-18.04"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: $SKIP_UBUNTU_18
 
   # - label: ":darwin: macOS 10.14 - Unit Test"
   #   command:
