--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -81,7 +81,7 @@ steps:
     timeout: ${TIMEOUT:-10}
     skip: $SKIP_AMAZON_LINUX_2
 
-  - label: ":centos: CentOS 7.6 - Test"
+  - label: ":centos: CentOS 7.6 - Unit Test"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
       - "bash ./.cicd/parallel-tests.sh"
