--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -22,6 +22,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
+    skip: $SKIP_CENTOS_7
 
   - label: ":ubuntu: Ubuntu 16.04 - Build"
     command:
@@ -66,6 +67,7 @@ steps:
           wait-network: true
     agents:
       - "queue=mac-anka-large-node-fleet"
+    skip: $SKIP_MOJAVE
 
   - wait
 
@@ -79,7 +81,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_AMAZON_LINUX_2
+    skip: ${SKIP_AMAZON_LINUX_2}${SKIP_UNIT_TESTS}
 
   - label: ":centos: CentOS 7.6 - Unit Test"
     command:
@@ -91,7 +93,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_CENTOS_7
+    skip: ${SKIP_CENTOS_7}${SKIP_UNIT_TESTS}
 
   - label: ":ubuntu: Ubuntu 16.04 - Unit Test"
     command:
@@ -103,7 +105,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_16
+    skip: ${SKIP_UBUNTU_16}${SKIP_UNIT_TESTS}
 
   - label: ":ubuntu: Ubuntu 18.04 - Unit Test"
     command:
@@ -115,7 +117,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_18
+    skip: ${SKIP_UBUNTU_18}${SKIP_UNIT_TESTS}
 
   - label: ":darwin: macOS 10.14 - Unit Test"
     command:
@@ -134,7 +136,7 @@ steps:
           wait-network: true
     agents:
       - "queue=mac-anka-node-fleet"
-    skip: $SKIP_MOJAVE
+    skip: ${SKIP_MOJAVE}${SKIP_UNIT_TESTS}
 
   - label: ":aws: Amazon_Linux 2 - Serial Test"
     command:
@@ -146,7 +148,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_AMAZON_LINUX_2
+    skip: ${SKIP_AMAZON_LINUX_2}${SKIP_SERIAL_TESTS}
 
   - label: ":centos: CentOS 7.6 - Serial Test"
     command:
@@ -158,7 +160,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_CENTOS_7
+    skip: ${SKIP_CENTOS_7}${SKIP_SERIAL_TESTS}
 
   - label: ":ubuntu: Ubuntu 16.04 - Serial Test"
     command:
@@ -170,7 +172,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_16
+    skip: ${SKIP_UBUNTU_16}${SKIP_SERIAL_TESTS}
 
   - label: ":ubuntu: Ubuntu 18.04 - Serial Test"
     command:
@@ -182,7 +184,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_18
+    skip: ${SKIP_UBUNTU_18}${SKIP_SERIAL_TESTS}
 
   - label: ":darwin: macOS 10.14 - Serial Test"
     command:
@@ -201,73 +203,74 @@ steps:
           wait-network: true
     agents:
       - "queue=mac-anka-node-fleet"
-    skip: $SKIP_MOJAVE
+    skip: ${SKIP_MOJAVE}${SKIP_SERIAL_TESTS}
 
-  # - label: ":aws: Amazon_Linux 2 - Long-Running Tests"
-  #   command:
-  #     - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-  #     - "bash ./.cicd/long-running-tests.sh"
-  #   env:
-  #     IMAGE_TAG: "amazonlinux-2"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: $SKIP_AMAZON_LINUX_2
+  - label: ":aws: Amazon_Linux 2 - Long-Running Tests"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/long-running-tests.sh"
+    env:
+      IMAGE_TAG: "amazonlinux-2"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: ${SKIP_AMAZON_LINUX_2}${SKIP_LONG_RUNNING_TESTS:-false}
 
-  # - label: ":centos: CentOS 7.6 - Long-Running Tests"
-  #   command:
-  #     - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-  #     - "bash ./.cicd/long-running-tests.sh"
-  #   env: 
-  #     IMAGE_TAG: "centos-7.6"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: $SKIP_CENTOS_7
+  - label: ":centos: CentOS 7.6 - Long-Running Tests"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/long-running-tests.sh"
+    env: 
+      IMAGE_TAG: "centos-7.6"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: ${SKIP_CENTOS_7}${SKIP_LONG_RUNNING_TESTS:-false}
 
-  # - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
-  #   command:
-  #     - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-  #     - "bash ./.cicd/parallel-tests.sh"
-  #   env: 
-  #     IMAGE_TAG: "ubuntu-16.04"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: $SKIP_UBUNTU_16
+  - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/parallel-tests.sh"
+    env: 
+      IMAGE_TAG: "ubuntu-16.04"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: ${SKIP_UBUNTU_16}${SKIP_LONG_RUNNING_TESTS:-false}
 
-  # - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
-  #   command:
-  #     - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-  #     - "bash ./.cicd/parallel-tests.sh"
-  #   env:
-  #     IMAGE_TAG: "ubuntu-18.04"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: $SKIP_UBUNTU_18
+  - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/parallel-tests.sh"
+    env:
+      IMAGE_TAG: "ubuntu-18.04"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: ${SKIP_UBUNTU_18}${SKIP_LONG_RUNNING_TESTS:-false}
 
-  # - label: ":darwin: macOS 10.14 - Long-Running Tests"
-  #   command:
-  #     - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
-  #     - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-  #     - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-  #     - "cd eos && bash ./.cicd/parallel-tests.sh"
-  #   plugins:
-  #     - chef/anka#v0.5.1:
-  #         no-volume: true
-  #         inherit-environment-vars: true
-  #         vm-name: 10.14.4_6C_14G_40G
-  #         vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
-  #         always-pull: true
-  #         debug: true
-  #         wait-network: true
-  #   agents:
-  #     - "queue=mac-anka-node-fleet"
+  - label: ":darwin: macOS 10.14 - Long-Running Tests"
+    command:
+      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
+      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
+      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
+      - "cd eos && bash ./.cicd/parallel-tests.sh"
+    plugins:
+      - chef/anka#v0.5.1:
+          no-volume: true
+          inherit-environment-vars: true
+          vm-name: 10.14.4_6C_14G_40G
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+          always-pull: true
+          debug: true
+          wait-network: true
+    agents:
+      - "queue=mac-anka-node-fleet"
+    skip: ${SKIP_MOJAVE}${SKIP_LONG_RUNNING_TESTS:-false}
 
   - wait:
     continue_on_failure: true
@@ -294,7 +297,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_18
+    skip: ${SKIP_UBUNTU_18}${SKIP_CONTRACT_BUILDER}
 
   - wait
 
@@ -307,7 +310,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_CENTOS_7
+    skip: ${SKIP_CENTOS_7}${SKIP_PACKAGE_BUILDER}
 
   - label: ":ubuntu: Ubuntu 16.04 - Package Builder"
     command:
@@ -318,7 +321,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_16
+    skip: ${SKIP_UBUNTU_16}${SKIP_PACKAGE_BUILDER}
 
   - label: ":ubuntu: Ubuntu 18.04 - Package Builder"
     command:
@@ -329,7 +332,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_18
+    skip: ${SKIP_UBUNTU_18}${SKIP_PACKAGE_BUILDER}
 
   - label: ":darwin: Mojave - Package Builder"
     command:
@@ -348,6 +351,7 @@ steps:
     agents:
       - "queue=mac-anka-node-fleet"
     timeout: 10
+    skip: ${SKIP_MOJAVE}${SKIP_PACKAGE_BUILDER}
 
   - label: ":git: Git Submodule Regression Check"
     command:
